--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.1.0",
     "grunt": "1.0.4",
     "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
